--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,346 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/output.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-    
-    
+
+
+
+    <header class="w-full h-[150px] bg-mainColor  max-lg:h-[75px]">
+
+        <div class="headerTop w-full h-1/2 flex justify-between items-center px-20 max-xl:px-10  max-lg:h-full">
+
+            <img src="../img/logo.svg" alt="LOGO">
+
+            <div id="searchInput"
+                class="w-1/3 h-[45px] overflow-hidden rounded-[25px] flex max-xl:w-1/2 bg-white max-lg:rounded-none max-lg:h-0 max-lg:absolute max-lg:left-0 max-lg:top-[75px] transition-all duration-400">
+                <input type="text" class="w-[80%] h-full pl-6 text-black border-none outline-none"
+                    placeholder="Search...">
+                <div class="w-[20%] h-full flex justify-center items-center bg-white"><i
+                        class="fa-solid fa-magnifying-glass text-2xl text-[#838383]"></i></div>
+            </div>
+
+            <div class="flex items-center gap-7">
+                <i id="buttonSearch" class="fa-solid fa-magnifying-glass text-2xl text-white cursor-pointer"></i>
+
+                <div><i id="buttonOrders" class="fa-solid fa-cart-shopping text-3xl text-white relative cursor-pointer">
+                        <div
+                            class="absolute w-[18px] h-[18px] rounded-[50%] bg-[red] top-[-5px] right-[-5px] flex justify-center items-center text-[10px]">
+                            5</div>
+                    </i></div>
+
+                <div
+                    class="w-[180px] h-[45px] bg-white flex items-center justify-between rounded-[25px] p-[2px] max-lg:hidden">
+                    <a href="#"
+                        class="w-1/2 h-full flex justify-center items-center bg-mainColor rounded-[25px] text-white">Sign
+                        Up</a><a href="#"
+                        class="w-1/2 h-full flex justify-center items-center rounded-[25px] text-mainColor font-bold">Login</a>
+                </div>
+
+
+                <i id="buttonNavbar" class="fa-solid fa-bars text-white text-2xl cursor-pointer"></i>
+            </div>
+
+        </div>
+
+        <div class="w-full h-1/2 flex justify-center items-end">
+            <div class="w-[50%] h-[45px] bg-white rounded-t-[20px]  max-xl:w-[70%] max-lg:bg-transparent">
+
+
+                <ul id="listNavbar"
+                    class="w-full h-full flex items-center justify-center gap-20 text-black font-medium max-lg:fixed max-lg:top-[75px] max-lg:right-0 max-lg:h-[88vh] max-lg:bg-titleColor  max-lg:flex-col max-lg:gap-12 max-lg:text-white max-lg:w-0 max-lg:overflow-hidden transition-all duration-400">
+                    <li><a class="hover:text-mainColor" href="#">Home</a></li>
+                    <li><a class="hover:text-mainColor" href="#">Cataloge</a></li>
+                    <li><a class="hover:text-mainColor" href="#">Devis</a></li>
+                    <li><a class="hover:text-mainColor" href="#">About</a></li>
+                    <li><a class="hover:text-mainColor" href="#">Contact</a></li>
+                </ul>
+
+
+            </div>
+        </div>
+
+    </header>
+
+
+
+
+
+
+    <div class="flex ">
+        <section class="container mt-10 mb-8 flex justify-center overflow-hidden cursor-pointer">
+            <div id="product-slider"
+                class="slider-container w-full flex items-center transition-transform duration-500  ">
+                <!-- Slide 1 -->
+                <section class="slide flex items-center  justify-center bg-black  h-[400px] ">
+                    <article
+                        class=" border-4 rounded-br-2xl rounded-tl-2xl border-gray-500 text-white bg-black p-4 flex flex-col w-3/4 sm:w-1/2 lg:w-1/3">
+                        <h1 class="text-2xl font-bold mb-2 text-[#3FA2F6]">MacBook Pro</h1>
+                        <p class="text-sm sm:text-base">- Intel 11th N5095</p>
+                        <p class="text-sm sm:text-base">- 16 Go de RAM</p>
+                        <p class="text-sm sm:text-base">- 15.6 pouces</p>
+                        <strong class="text-2xl mt-4 text-red-500 text-center">9999 <span
+                                class="text-sm">DHTTC</span></strong>
+                    </article>
+                    <p class="bg-yellow-400 text-white text-2xl font-bold rounded-2xl p-2 ml-4 mt-[-20]">-75%</p>
+                    <img src="./img/home/Layla Macbook Mockups - Mockups.jpeg" alt="MacBook Pro 16 Mockup"
+                        class="w-[50%] h-80 sm:h-80 ml-4 sm:ml-20" />
+                </section>
+                <!-- Slide 2 -->
+                <section class="slide flex items-center w-full h-[400px]  justify-center bg-black">
+                    <article
+                        class=" border-b-8  rounded-full border-blue-500  text-white bg-black p-4 flex flex-col w-3/4 sm:w-1/2 lg:w-1/3">
+                        <h1 class="text-2xl font-bold mb-2 text-[#3FA2F6]">Logitech G G335 (Blue)</h1>
+                        <p class="text-sm sm:text-base">- Microphone unidirectionnel rabattable</p>
+                        <p class="text-sm sm:text-base">- Jack 3,5mm Mâle Stéréo</p>
+                        <p class="text-sm sm:text-base">- Garantie :12 Mois</p>
+                        <strong class="text-2xl mt-4 text-red-500 text-center">7999 <span
+                                class="text-sm">DHTTC</span></strong>
+                    </article>
+                    <p class="bg-yellow-400 text-white text-2xl font-bold rounded-2xl p-2 ml-4">-50%</p>
+                    <img src="./img/home/casque.png" alt="Dell XPS 13 Mockup" class="w-[40%] h-60 sm:h-80 ml-4" />
+                </section>
+                <!-- Slide 3 -->
+                <section class="slide flex items-center w-full h-[400px]  justify-center bg-black">
+                    <article
+                        class="border-l-4 border-r-4 rounded-full border-green-500  text-white bg-black p-8 flex flex-col w-3/4 sm:w-1/2 lg:w-1/3">
+                        <h1 class="text-2xl font-bold mb-2 text-[#3FA2F6] text-center">Razer HyperFlux</h1>
+                        <p class="text-sm sm:text-base">- Razer Mamba HyperFlux</p>
+                        <p class="text-sm sm:text-base">- 96 g</p>
+                        <p class="text-sm sm:text-base">- 16 000 DPI 5G</p>
+                        <strong class="text-2xl mt-4 text-red-500 text-center">509.99 <span
+                                class="text-sm">DHTTC</span></strong>
+                    </article>
+                    <p class="bg-yellow-400 text-white text-2xl font-bold rounded-2xl p-2 ml-4">-60%</p>
+                    <img src="./img/home/Razer Mamba.jpeg" alt="Dell XPS 15 Mockup" class="w-[40%] h-60 sm:h-80 ml-4" />
+                </section>
+            </div>
+        </section>
+        <div class="container  text-center flex justify-center items-center">
+            <div class="relative w-[700px] h-[400px] bg-cover bg-top"
+                style="background-image: url('./img/home/friday.png');">
+                <button
+                    class="absolute bottom-0 right-0 transform -translate-x-1/2 mb-4 px-4 py-2 bg-blue-500 text-black text-4xl font-extrabold rounded-full">
+                    &gt;
+                </button>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <br>
+    <div id="OrderList"
+        class="orders w-0 overflow-hidden max-w-[500px] h-[90vh] max-h-[600px] bg-mainColor absolute top-[75px] right-0  rounded-b-[20px] transition-all duration-500">
+
+        <div
+            class="h-[15%] w-full border-b-2 border-white flex justify-center items-center text-white font-semibold text-2xl">
+            <h2>Your Orders</h2>
+        </div>
+
+        <div class="cardOrders w-full h-[65%] p-2 flex flex-col gap-2 overflow-y-auto">
+
+
+            <div class="w-full min-h-[100px]  bg-white rounded-[10px] flex  max-sm:min-h-[120px]">
+                <div class="w-[25%] h-full flex justify-center items-center p-2">
+                    <img src="../img/productOrder.svg" class="w-full h-full">
+                </div>
+                <div class="w-[55%] h-full flex flex-col justify-center ">
+                    <h2 class="text-2xl">Title</h2>
+                    <p class="text-[10px] max-sm:text-[8px]">description description description description description
+                        description description</p>
+                    <div class="flex items-center gap-5"><input type="number"
+                            class="w-[40px] h-50px text-lg border-2 border-black pl-[5px]" value="1">
+                        <h3 class="max-sm:hidden">Type RAM/PROCESSEUR</h3>
+                    </div>
+                </div>
+                <div class="w-[20%] h-full flex flex-col justify-end items-end p-2">
+                    <div class="w-full h-[90%] flex justify-end items-center pr-4"><i
+                            class="fa-solid fa-trash text-xl text-[red] cursor-pointer"></i></div>
+                    <h3 class="text-[#5b5b5b]">250$</h3>
+                </div>
+            </div>
+
+            <div class="w-full min-h-[100px]  bg-white rounded-[10px] flex  max-sm:min-h-[120px]">
+                <div class="w-[25%] h-full flex justify-center items-center p-2">
+                    <img src="../img/productOrder.svg" class="w-full h-full">
+                </div>
+                <div class="w-[55%] h-full flex flex-col justify-center ">
+                    <h2 class="text-2xl">Title</h2>
+                    <p class="text-[10px] max-sm:text-[8px]">description description description description description
+                        description description</p>
+                    <div class="flex items-center gap-5"><input type="number"
+                            class="w-[40px] h-50px text-lg border-2 border-black pl-[5px]" value="1">
+                        <h3 class="max-sm:hidden">Type RAM/PROCESSEUR</h3>
+                    </div>
+                </div>
+                <div class="w-[20%] h-full flex flex-col justify-end items-end p-2">
+                    <div class="w-full h-[90%] flex justify-end items-center pr-4"><i
+                            class="fa-solid fa-trash text-xl text-[red] cursor-pointer"></i></div>
+                    <h3 class="text-[#5b5b5b]">250$</h3>
+                </div>
+            </div>
+
+            <div class="w-full min-h-[100px]  bg-white rounded-[10px] flex  max-sm:min-h-[120px]">
+                <div class="w-[25%] h-full flex justify-center items-center p-2">
+                    <img src="../img/productOrder.svg" class="w-full h-full">
+                </div>
+                <div class="w-[55%] h-full flex flex-col justify-center ">
+                    <h2 class="text-2xl">Title</h2>
+                    <p class="text-[10px] max-sm:text-[8px]">description description description description description
+                        description description</p>
+                    <div class="flex items-center gap-5"><input type="number"
+                            class="w-[40px] h-50px text-lg border-2 border-black pl-[5px]" value="1">
+                        <h3 class="max-sm:hidden">Type RAM/PROCESSEUR</h3>
+                    </div>
+                </div>
+                <div class="w-[20%] h-full flex flex-col justify-end items-end p-2">
+                    <div class="w-full h-[90%] flex justify-end items-center pr-4"><i
+                            class="fa-solid fa-trash text-xl text-[red] cursor-pointer"></i></div>
+                    <h3 class="text-[#5b5b5b]">250$</h3>
+                </div>
+            </div>
+
+
+
+        </div>
+
+        <div class="w-full h-[20%]">
+            <div class="w-full h-[30%] flex justify-end items-center pr-2">
+                <h2 class="text-xl font-semibold">Totale: <span class="text-[#b1b1b1]">1000$</span></h2>
+            </div>
+            <div class="w-full h-[70%] flex justify-center items-center">
+                <a href="#"
+                    class="h-[55px] w-[50%] bg-white flex justify-center items-center text-mainColor font-semibold text-xl rounded-[20px] hover:bg-[#e2e2e2]">checkout</a>
+            </div>
+        </div>
+
+    </div>
+
+
+
+
+
+
+
+
+    <footer
+        class="w-full min-h-[400px] bg-mainColor grid grid-cols-[30%_30%_40%] grid-rows-[80% 20%] justify-center max-lg:grid-cols-[50%_50%] max-lg:grid-rows-[auto_auto_60px] max-lg:gap-y-5">
+
+        <div class="flex flex-col pt-10 pl-20 max-sm:pl-5">
+            <h3 class="text-white font-bold text-xl mb-5">Company</h3>
+            <ul class="flex flex-col gap-3 text-[#D4D4D4] font-medium">
+                <li>Home</li>
+                <li>Catalogue</li>
+                <li>A propos</li>
+            </ul>
+        </div>
+
+        <div class="flex flex-col pt-10">
+            <h3 class="text-white font-bold text-xl mb-5">Payer avec</h3>
+            <div class="grid grid-cols-3 w-1/2 payMethod gap-4 max-sm:justify-center max-sm:flex-wrap max-sm:w-[90%]">
+                <img src="../img/bank/paypal.svg" alt="Paypal">
+                <img src="../img/bank/apple-pay.svg" alt="apple">
+                <img src="../img/bank/mastercard.svg" alt="mastercard">
+                <img src="../img/bank/visa.svg" alt="visa">
+                <img src="../img/bank/bitcoin.svg" alt="bitcoin">
+                <img src="../img/bank/payu.svg" alt="payu">
+            </div>
+        </div>
+
+
+        <div class="flex flex-col pt-10 gap-y-5 max-lg:col-span-full max-lg:pl-20 max-sm:pl-5">
+            <h3 class="text-white font-bold text-xl">Company</h3>
+            <p class="w-[70%] text-[#D4D4D4]">
+                Lorem ipsum sit amet, consectateur adispicing elit. Fusce euismod concallis velit, eu auctor lacus
+                vehicula sit amet.
+            </p>
+            <div class="flex gap-3 max-sm:w-full max-sm:justify-center max-sm:pl-[-1.25rem]">
+
+                <a href="#">
+                    <div
+                        class="w-14 h-14 bg-[#A6A6A6] flex justify-center items-center hover:scale-105 transition-all duration-400">
+                        <i class="fa-brands fa-facebook-f text-white text-3xl"></i></div>
+                </a>
+
+                <a href="#">
+                    <div
+                        class="w-14 h-14 bg-[#A6A6A6] flex justify-center items-center hover:scale-105 transition-all duration-400">
+                        <i class="fa-brands fa-twitter text-white text-3xl"></i></div>
+                </a>
+
+                <a href="#">
+                    <div
+                        class="w-14 h-14 bg-[#A6A6A6] flex justify-center items-center hover:scale-105 transition-all duration-400">
+                        <i class="fa-brands fa-linkedin text-white text-3xl"></i></div>
+                </a>
+
+                <a href="#">
+                    <div
+                        class="w-14 h-14 bg-[#A6A6A6] flex justify-center items-center hover:scale-105 transition-all duration-400">
+                        <i class="fa-brands fa-github text-white text-3xl"></i></div>
+                </a>
+
+            </div>
+        </div>
+
+        <div class="col-span-full flex justify-center items-center">
+            <h6 class="text-white text-center">© 2024 Codebenders. All rights reserved</h6>
+        </div>
+
+    </footer>
+
 
     <script src="js/script.js"></script>
     <script src="js/home.js"></script>
 </body>
+
 </html>
